--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
+        "spatie/enum": "^3.9",
         "spatie/laravel-activitylog": "^3.17"
     },
     "require-dev": {
